--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "babel-cli": "^6.11.4",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.1",
